<modify> bugFix backgorundImage

--- a/room.html
+++ b/room.html
@@ -156,7 +156,7 @@
 		<div class="p-room">
 			
 <div class="p-room-bookAction">
-	<a id="viewOtherRoomLink" href="#">查看其它房型</a>
+	<a id="viewOtherRoomLink" href="/goodRoom/">查看其它房型</a>
 	<div class="p-room-bookAction__box">
 		<div class="p-room-bookAction__box__price">
 			<!-- <p>$1,380</p>
